# call_of_duty

./: .gitignore  CRUSOE.md  README.md  docker-compose.yml  main.py  pyproject.toml  report_live.md  report_log.md  requirements.txt
backend/: .env.example  pytest.ini  requirements.txt
backend/app/: config.py  main.py  models.py  neo4j_client.py
backend/app/core/: config.py
backend/app/demo/: __init__.py  seed.py
backend/app/inference/: __init__.py  agents.py  audio_agent.py  image_agent.py  media.py  model_router.py  situation_agent.py
backend/app/repositories/: __init__.py  observations.py  situation.py
backend/app/routes/: admin.py  clinics.py  graph.py  transfers.py  warehouses.py
backend/app/schemas/: __init__.py  briefings.py  diagnostics.py  domain.py  inference.py  observations.py
backend/app/services/: llm_agent.py  observation_service.py  recommendation_engine.py  recommendation_service.py  risk_engine.py  seed_data.py  situation_service.py  system_diagnostics.py  transfer_engine.py  transfer_service.py
backend/scripts/: diagnose_system.py  init_graph.py  list_crusoe_models.py
backend/scripts/neo4j/: constraints.cypher  diagnostics.cypher  seed.cypher
backend/tests/: test_llm_agent.py  test_recommendation_engine.py  test_risk_engine.py  test_transfer_engine.py
backend/tests/contract/: test_architecture_refactor.py  test_crusoe_client.py  test_ingestion_dependencies.py  (+2 more)
detectionAgent/: Agent1.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
speechAgent/: AgentTranscript.py
(+39 files in other folders)
